--- a/gallery.html
+++ b/gallery.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>GameCity</title>
+	<title>GameCitydsadsads</title>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="colorbox.css">
 	<link rel="stylesheet" href="jquery-ui/css/custom-theme/jquery-ui-1.10.4.custom.css">
 </head>
 <body>
+
 	<header id="header"></header>
 	<div id="content" class='mainWidth'>
 		<input id='navToggle' type='checkbox' />
