index sidebar & css

--- a/html/index.html
+++ b/html/index.html
@@ -150,34 +150,20 @@
 			</div>
 			<aside id='sidebar' class='rightColumn'>
 				<section>
-					<h1 class='ellipsis mail'>Latest Comments</h1>
-					<div class='entry'>
-						<h3><a class='ellipsis' href='#'>Lorem ipsum dolor sit amet</a></h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis aliquam diam, nec volutpat dolor consequat et. Sed posuere nulla in diam pretium, in porttitor sapien facilisis.
-					</div>
-					<div class='entry'>
-						<h3><a class='ellipsis' href='#'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis aliquam diam</a></h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis aliquam diam, nec volutpat dolor consequat et. Sed posuere nulla in diam pretium, in porttitor sapien facilisis.
-					</div>
-					<div class='entry'>
-						<h3><a class='ellipsis' href='#'>Lorem ipsum dolor sit amet</a></h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis aliquam diam, nec volutpat dolor consequat et. Sed posuere nulla in diam pretium, in porttitor sapien facilisis.
-					</div>
+					<h1 class='ellipsis mail'>Реклама 300x600</h1>
+					<a href="http://google.bg" target="_blank"><img src="http://www.imagine-publishing.co.uk/adresources/images/300x600.jpg" class="fixche" /></a>
 				</section>
 				<section>
-					<h1 class='ellipsis alt mail'>Admin Posts</h1>
-					<div class='entry'>
-						<h3><a class='ellipsis' href='#'>Lorem ipsum dolor sit amet</a></h3>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis aliquam diam, nec volutpat dolor consequat et. Sed posuere nulla in diam pretium, in porttitor sapien facilisis.
-					</div>
+					<h1 class='ellipsis alt mail'>HotCS във Фейсбук</h1>
+					<iframe src="http://facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fdangercseupage&amp;width=300&amp;height=290&amp;show_faces=true&amp;colorscheme=light&amp;stream=false&amp;border_color&amp;header=true&amp;appId=510290272319173" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:290px;" allowTransparency="true"></iframe>
 				</section>
 				<section>
-					<h1 class='ellipsis picture'>Gallery Images</h1>
+					<h1 class='ellipsis picture'>Реклама 140x140</h1>
 					<div class='entry gallery inlineContainer'>
-						<a class='lightbox' href='placeholders/1.jpg'><img src='placeholders/1.jpg' alt='image' /></a>
-						<a class='lightbox' href='placeholders/2.jpg'><img src='placeholders/2.jpg' alt='image' /></a>
-						<a class='lightbox' href='placeholders/3.jpg'><img src='placeholders/3.jpg' alt='image' /></a>
-						<a class='lightbox' href='placeholders/4.jpg'><img src='placeholders/4.jpg' alt='image' /></a>
+						<a class='lightboxfix' href='http://google.bg/' target="_blank"><img src='placeholders/1.jpg' alt='image' /></a>
+						<a class='lightboxfix' href='http://google.bg/' target="_blank"><img src='placeholders/2.jpg' alt='image' /></a>
+						<a class='lightboxfix' href='http://google.bg/' target="_blank"><img src='placeholders/3.jpg' alt='image' /></a>
+						<a class='lightboxfix' href='http://google.bg/' target="_blank"><img src='placeholders/4.jpg' alt='image' /></a>
 					</div>
 				</section>
 			</aside>
